# Coursework_7sem

./: .gitignore  CMakeLists.txt  README.md  main.cpp  Презентация.odp
DataGenerator/: generator.h  main.cpp
DataGenerator/FixedWorkers/: fixed_workers_generator.cpp  fixed_workers_generator.h
DataGenerator/Setups/: Diagonal-3.txt  Diagonal.txt  OneUnique.txt  SimmilarTypes.txt  Simple-1.txt  Simple-2.txt  Simple-3.txt  UniqueWorker.txt
DataGenerator/Setups/MetaInfo/: GeneratedTestsInfo.txt  utils.cpp  utils.h
Metrics/FirstFail/: first_fail.cpp  first_fail.h  main.cpp  utils.cpp  utils.h
Model/: action.h  querry.h  scheduler.h  task.h  test_case.h  worker.h
Schedulers/Actions/: add_task.h  add_worker.h  add_worker_type_info.h
Schedulers/Mock/: mock_scheduler.cpp  mock_scheduler.h
Schedulers/Offline/: offline_scheduler.cpp  offline_scheduler.h  offline_scheduler_tests.cpp
Schedulers/Version1/: scheduler_v1.cpp  scheduler_v1.h
Schedulers/Version2/: scheduler_v2.cpp  scheduler_v2.h
Schedulers/Version3/: scheduler_v3.cpp  scheduler_v3.h
Tests/1000/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
Tests/500/SimmilarTypes/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test3.txt  test30.txt  test31.txt  test32.txt  test33.txt  test34.txt  test35.txt  test36.txt  test37.txt  test38.txt  test39.txt  test4.txt  test40.txt  test41.txt  test42.txt  test43.txt  test44.txt  test45.txt  (+10 more)
Tests/500/Simple-1/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  (+32 more)
Utils/: filesystem.cpp  filesystem.h
Utils/Random/: random_event_generator.cpp  random_event_generator.h
(+2000 files in other folders)
